# deploy-demos

./: .gitignore  README.md
bucket-time/: Pulumi.yaml
commandAndControl/: index.js  index.ts  package.json  tsconfig.json
demo/: Pulumi.dev.yaml  Pulumi.yaml  package.json
deployment-drivers/python/: __main__.py
deployment-drivers/python/python-driver/: README.md  __main__.py  pyproject.toml
deployment-drivers/python/python-driver/drivers/: api.py
docs/: api-docs.md  git-push-to-deploy.md
go-bucket/: main.go
lambda-template/: Pulumi.yaml  package.json
meagan/: Pulumi.dev.yaml  Pulumi.yaml  package.json
meagan-workshop/: Pulumi.test1.yaml  Pulumi.yaml  package.json
meagan-workshop-1/: Pulumi.dev.yaml  Pulumi.yaml  package.json
pulumi-programs/aws-ts-s3/: Pulumi.yaml  index.ts  package-lock.json  package.json
pulumi-programs/bucket-time/: Pulumi.pdg-dev.yaml  Pulumi.yaml  destroy.sh  env.sh  index.ts  list.sh  package-lock.json  package.json  update.sh
pulumi-programs/drift-detection/: Pulumi.dev.yaml  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json
pulumi-programs/drift-test/: Pulumi.dev.yaml  Pulumi.yaml  package.json
pulumi-programs/go-bucket/: Pulumi.yaml  go.mod  go.sum
pulumi-programs/lambda-template/: index.ts  package-lock.json  package.json
pulumi-programs/simple-resource/: Pulumi.yaml  index.ts  package-lock.json  package.json
pulumi-programs/stack-reaper/: Pulumi.dev.yaml  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json
simple-resource/: .gitignore  Pulumi.yaml
(+32 files in other folders)
